fixed so deer does not jump back to its starting position when animation is done

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -859,7 +859,8 @@ html {
     }
 
     80%,
-    99% {
+    99%,
+    100% {
         bottom: 13vw;
         left: 90%;
     }
